--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -42,16 +42,6 @@ body {
   margin-left: auto;
 }
 
-/* .page {
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  overflow: hidden;
-  z-index: 0;
-} */
-
 .bg-alternate {
   background-color: var(--secondary-bg-color);
 }
@@ -287,4 +277,8 @@ html {
   opacity: 0.5;
   filter: contrast(0%);
   cursor: pointer;
+}
+
+.card {
+  background-color: inherit !important;
 }
