--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,9 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
+html {
+  overflow: hidden;
+}
+
 body {
   --bg-color: #313539;
   --secondary-bg-color: #292e34;
@@ -15,23 +19,29 @@ body {
 }
 
 body {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-body {
-  margin: 0;
   font-family: ibm plex mono, monospace;
-  font-size: 0.9375rem;
-  font-weight: 400;
-  line-height: 1.7;
   color: var(--type-color);
   text-align: left;
   background-color: var(--bg-color);
+  position: fixed;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  max-height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  overscroll-behavior-y: none;
+  touch-action: manipulation;
+  -webkit-user-drag: none;
+}
+
+.page {
+  overflow-y: auto;
+  height: 100vh;
+  overflow-x: hidden;
 }
 
 .container-fluid {
@@ -255,6 +265,7 @@ div {
 }
 
 html {
+  overflow-x: hidden;
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
